--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,11 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+.mapboxgl-ctrl-geocoder {
+  display: none !important;
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
