--- a/styles/Mapbox.module.css
+++ b/styles/Mapbox.module.css
@@ -1,8 +1,5 @@
 .container {
+    flex-grow: 1;
     position: relative;
-    width: 100%;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
+    height: 100vh;
 }
