added deletion and conditional adding of input fields

--- a/styles/Mapbox.module.css
+++ b/styles/Mapbox.module.css
@@ -3,3 +3,8 @@
     position: relative;
     height: 100vh;
 }
+
+.disablePseudoElements::before,
+.disablePseudoElements::after {
+    content: none !important;
+}
